Add restaurants and auth to documentation
